fixing looks on mobile safari

--- a/src/App.scss
+++ b/src/App.scss
@@ -76,12 +76,12 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
-        div {
+        div#slider {
           background-color: $secondary;
           height: 60%;
           width: 50%;
           margin-left: -50%;
-          transition: all 0.5s ease-in-out;
+          transition: margin-left 0.5s ease-in-out;
         }
       }
     }
